@@ -371,7 +371,7 @@ public class ConfigFileReaderWriter {
                 }
 
                 //replace environment variable placeholders
-                String configFileContent = new String(Files.readAllBytes(configFile.toPath()), StandardCharsets.UTF_8);
+                String configFileContent = Files.readString(configFile.toPath());
                 final FileFragmentUtil.FragmentResult fragmentResult = FileFragmentUtil.replaceFragmentPlaceHolders(configFileContent);
 
                 fragmentToModificationTime.putAll(fragmentResult.getFragmentToModificationTime());
@@ -379,6 +379,9 @@ public class ConfigFileReaderWriter {
                 configFileContent = fragmentResult.getRenderResult(); //must happen before env rendering so templates can be used with envs
                 configFileContent = IfUtil.replaceIfPlaceHolders(configFileContent);
                 configFileContent = EnvVarUtil.replaceEnvironmentVariablePlaceholders(configFileContent);
+
+                log.error("CONFIG READ AND RENDERED:\n {}", configFileContent);
+
                 final ByteArrayInputStream is =
                         new ByteArrayInputStream(configFileContent.getBytes(StandardCharsets.UTF_8));
                 final StreamSource streamSource = new StreamSource(is);
